# kubernetes-rust

./: .gitignore  Cargo.toml  Makefile  README.md  fixcode.sh
examples/: incluster_config.rs  list_pod.rs
kubernetes-apis/: Cargo.toml  README.md
kubernetes-apis/docs/: AdmissionregistrationApi.md  AdmissionregistrationV1alpha1Api.md  AdmissionregistrationV1beta1Api.md  ApiextensionsApi.md  ApiextensionsV1beta1Api.md  ApiregistrationApi.md  ApiregistrationV1Api.md  ApiregistrationV1beta1Api.md  ApisApi.md  AppsApi.md  AppsV1Api.md  AppsV1beta1Api.md  AppsV1beta2Api.md  AuditregistrationApi.md  AuditregistrationV1alpha1Api.md  AuthenticationApi.md  AuthenticationV1Api.md  AuthenticationV1beta1Api.md  AuthorizationApi.md  AuthorizationV1Api.md  AuthorizationV1beta1Api.md  AutoscalingApi.md  AutoscalingV1Api.md  AutoscalingV2beta1Api.md  AutoscalingV2beta2Api.md  BatchApi.md  BatchV1Api.md  BatchV1beta1Api.md  BatchV2alpha1Api.md  CertificatesApi.md  CertificatesV1beta1Api.md  CoordinationApi.md  CoordinationV1beta1Api.md  CoreApi.md  CoreV1Api.md  EventsApi.md  EventsV1beta1Api.md  ExtensionsApi.md  ExtensionsV1beta1Api.md  IoK8sApiAdmissionregistrationV1alpha1Initializer.md  (+904 more)
kubernetes-apis/src/apis/: admissionregistration_api.rs  admissionregistration_v1alpha1_api.rs  admissionregistration_v1beta1_api.rs  apiextensions_api.rs  apiextensions_v1beta1_api.rs  apiregistration_api.rs  apiregistration_v1_api.rs  apiregistration_v1beta1_api.rs  (+53 more)
src/: lib.rs
src/client/: mod.rs
src/config/: apis.rs  exec.rs  kube_config.rs  mod.rs  utils.rs
src/oauth2/: mod.rs
(+888 files in other folders)
